--- a/index.html
+++ b/index.html
@@ -2,76 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Basic Infos</title>
+  <title>Toni Panacek</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Droid Serif:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="sidebar">
-    <ul>
-      <li><a href="#summary"><img class="smaller" src="images/pizza.png" alt="about"></a></li> <br> <br><br>
-      <li><a href="#favorite-artists"><img class="smaller" src="images/portrait.png" alt="artists"></a></li> <br> <br><br>
-      <li><a href="#help"><img class="smaller" src="images/at_sign.png" alt="help"></a></li><br><br><br>
-    </ul>
+  <div class="header-container" id="about">
+    <div class="nav-bar">
+      <a href="#contact">contact</a>
+      <a href="#projects">projects</a>
+    </div>
+    <div class="header-content">
+      <img src="images/tonii.jpg" id="avatar">
+      <h1>Hello! I'm Toni</span>, <br>a web developer since 2017 <br>& problem-solver since 1990</h1>
+    </div>
   </div>
-  <div id="page-content" class="container">
-    <div id="summary" class="card-white">
-      <img class="img-circle" src="images/toni.jpg" alt="Antoinette Panacek">
-      <h1>Antoinette Panacek</h1>
-      <h3>Programmer @Le Wagon</h3>
-      <p>Programmer-in-training with Le Wagon in Berlin, Germany.</p>
-      <br>
-      <a href="https://www.lewagon.com" class="btn-red">See for yourself</a>
+  <div class="arrow">
+    <img src="images/arrow.png" id="arrow">
+  </div>
+  <div class="container project-cards" id="projects">
+    <h1>Here are some fun things I've made:</h1>
+    <div class="card">
+      <div class="card-content">
+        <div class="project-description second rt">
+          <h3>Yakitty-Yak</h3>
+          <p>Slack integration app to connect members of large <br>Slack channels. </p>
+          <p><a href="#">Website</a></p>
+          <p><a href="#">Github</a></p>
+        </div>
+        <div class="project-images">
+          <img src="images/yakittyyak.png" alt="toni" class="img-lrg" id="three">
+          <div class="border right third"></div>
+        </div>
+      </div>
     </div>
-    <div class="card-white list-inline">
-      <ul>
-        <li><a href="https://www.facebook.com/toni.panacek" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.instagram.com/tonipanoche/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href="https://twitter.com/toniczechit?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-      </ul>
+    <div class="card">
+      <div class="card-content">
+        <div class="project-images">
+          <div class="border left second"></div>
+          <img src="images/moversnmakersgrid.png" class="img-lrg" id="two">
+        </div>
+        <div class="project-description first lt">
+          <h3>Movers 'n' Makers</h3>
+          <p>Marketplace for locally borrowing items you need and lending out items you don't.</p>
+          <p><a href="#">Website</a></p>
+          <p><a href="#">Github</a></p>
+        </div>
+      </div>
     </div>
-    <div id="favorite-artists" class="card-white">
-      <h3>My Favorite Artists:</h3>
-      <table>
-        <tbody>
-          <tr>
-            <td><img class="img-avatar" src="images/matisse.jpg" alt="Henri Matisse"></td>
-            <td>
-              <h4>Henri Matisse</h4>
-              <p>Henri Matisse was born December 31, 1869, in Le Cateau in northern France. Over a six-decade career he worked in all media, from painting to sculpture to printmaking. Although his subjects were traditional—nudes, figures in landscapes, portraits, interior views—his revolutionary use of brilliant color and exaggerated form to express emotion made him one of the most influential artists of the 20th century.</p>
-            </td>
-          </tr>
-          <tr>
-            <td><img class="img-avatar" src="images/frida.jpg" alt="Frida Kahlo"></td>
-            <td>
-              <h4>Frida Kahlo</h4>
-              <p>Artist Frida Kahlo was born on July 6, 1907, in Coyocoán, Mexico City, Mexico. Considered one of Mexico's greatest artists, Frida Kahlo began painting after she was severely injured in a bus accident. Kahlo later became politically active and married fellow communist artist Diego Rivera in 1929. She exhibited her paintings in Paris and Mexico before her death in 1954.</p>
-            </td>
-          </tr>
-          <tr>
-            <td><img class="img-avatar" src="images/chris.jpg" alt="Christiane Spangsberg"></td>
-            <td>
-              <h4>Christiane Spangsberg</h4>
-              <p>Christiane Spangsberg is an artist inspired by originality and imperfection. Back in 2010 she found some drawings of animals made by Picasso, which inspired her to practice the one-line technique. More recently she has been inspired by Fauvism, a style which was developed by a loose group of early twentieth-century modern artists, among them Henri Matisse and André Derain. Although the direction only lasted a few years Christiane seeks to get a deeper understanding of the Fauvism style and work. </p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div id="help" class="card-white">
-      <h3>About this Page:</h3>
-      <p>This page has been coded during the
-        <a href="https://www.lewagon.com/">Fullstack Program @ Le Wagon,</a>
-        which was probably the best experience of my entire life.
-      </p>
-    </div>
-    <div class="card-white list-inline">
-      <ul>
-        <li><a href=""></a><i class="fa fa-heart" aria-hidden="true"></i></li>
-        <li><a href=""></a><i class="fa fa-heart" aria-hidden="true"></i></li>
-        <li><a href=""></a><i class="fa fa-heart" aria-hidden="true"></i></li>
-      </ul>
+    <div class="card" id="first-card">
+      <div class="card-content">
+        <div class="project-description third rt">
+          <h3>Mister Cocktail</h3>
+          <p>Cocktail recipe site for searching and sharing.</p>
+          <p><a href="#">Website</a></p>
+          <p><a href="#">Github</a></p>
+        </div>
+        <div class="project-images">
+          <img src="images/mister-cocktail.png" class="img-lrg" id="one">
+          <div class="border right first">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
