--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="#projects">projects</a>
     </div>
     <div class="header-content">
-      <img src="images/tonii.jpg" id="avatar">
+      <img src="images/tonii.png" id="avatar">
       <h1>Hello! I'm Toni</span>, <br>a web developer since 2017 <br>& problem-solver since 1990</h1>
     </div>
   </div>
