updated links part 2

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="project-description second rt">
           <h3>Yakitty-Yak</h3>
           <p>Slack integration app to connect members of large <br>Slack channels. </p>
-          <p><a href="https://yakitty-yak.world">Website</a></p>
-          <p><a href="https://github.com/joaomarcelofm/yakitty-yak">Github</a></p>
+          <p><a href="www.yakitty-yak.world" target="_">Website</a></p>
+          <p><a href="https://github.com/joaomarcelofm/yakitty-yak" target="_">Github</a></p>
         </div>
         <div class="project-images">
           <img src="images/yakittyyak.png" alt="toni" class="img-lrg" id="three">
@@ -46,8 +46,8 @@
         <div class="project-description first lt">
           <h3>Movers 'n' Makers</h3>
           <p>Marketplace for locally borrowing items you need and lending out items you don't.</p>
-          <p><a href="www.moversnmakers.herokuapp.com">Website</a></p>
-          <p><a href="https://github.com/tonipanacek/moversnmakers">Github</a></p>
+          <p><a href="www.moversnmakers.herokuapp.com" target="_">Website</a></p>
+          <p><a href="https://github.com/tonipanacek/moversnmakers" target="_">Github</a></p>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
         <div class="project-description third rt">
           <h3>Mister Cocktail</h3>
           <p>Cocktail recipe site for searching and sharing.</p>
-          <p><a href="https://github.com/tonipanacek/rails-mister-cocktail">Github</a></p>
+          <p><a href="https://github.com/tonipanacek/rails-mister-cocktail" target="_">Github</a></p>
         </div>
         <div class="project-images">
           <img src="images/mister-cocktail.png" class="img-lrg" id="one">
