added contact links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Toni Panacek</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -28,7 +28,7 @@
         <div class="project-description second rt">
           <h3>Yakitty-Yak</h3>
           <p>Slack integration app to connect members of large <br>Slack channels. </p>
-          <p><a href="www.yakitty-yak.world" target="_blank">Website</a></p>
+          <p><a href="http://www.yakitty-yak.world" target="_blank">Website</a></p>
           <p><a href="https://github.com/joaomarcelofm/yakitty-yak" target="_blank">Github</a></p>
         </div>
         <div class="project-images">
@@ -46,7 +46,7 @@
         <div class="project-description first lt">
           <h3>Movers 'n' Makers</h3>
           <p>Marketplace for locally borrowing items you need and lending out items you don't.</p>
-          <p><a href="www.moversnmakers.herokuapp.com" target="_blank">Website</a></p>
+          <p><a href="http://www.moversnmakers.herokuapp.com" target="_blank">Website</a></p>
           <p><a href="https://github.com/tonipanacek/moversnmakers" target="_blank">Github</a></p>
         </div>
       </div>
@@ -66,5 +66,12 @@
       </div>
     </div>
   </div>
+    <div class="footer" id="contact">
+      <div class="contact-links">
+        <a href="mailto:toni.panacek@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/tonipanacek" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/apanacek/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
 </body>
 </html>
