height of first card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="#projects">projects</a>
     </div>
     <div class="header-content">
-      <img src="images/tonez.jpeg" id="avatar">
+      <img src="images/tonii.png" id="avatar">
       <h1>Hello! I'm Toni</span>, <br>a web developer since 2017 <br>& problem-solver since 1990</h1>
     </div>
   </div>
@@ -27,9 +27,9 @@
       <div class="card-content">
         <div class="project-description second rt">
           <h3>Yakitty-Yak</h3>
-          <p>Slack integration app to connect members of large <br>Slack channels. </p>
+          <p>Slack integration app to connect members of large <br>Slack channels for mentorship and collaboration. </p>
           <p><a href="http://www.yakitty-yak.world" target="_blank">Website</a></p>
-          <p><a href="https://github.com/joaomarcelofm/yakitty-yak" target="_blank">Github</a></p>
+          <p><a href="https://github.com/joaomarcelofm/yakitty-yak" target="_blank">Github</a></p><br>
         </div>
         <div class="project-images">
           <img src="images/yakittyyak.png" alt="toni" class="img-lrg" id="three">
