added new projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header-content">
       <img src="images/tonii.png" id="avatar">
-      <h1>Hello! I'm Toni</span>, <br>a web developer since 2017 <br>& problem-solver since 1990</h1>
+      <h1>Hello! I'm Toni</span>, <br>a web developer <br>& snack fanatic</h1>
     </div>
   </div>
   <div class="arrow">
@@ -65,21 +65,32 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="card">
+    <div class="card">
       <div class="card-content">
         <div class="project-images">
           <div class="border left second"></div>
-          <img src="images/moversnmakersgrid.png" class="img-lrg" id="two">
+          <img src="images/colourtv.png" class="img-lrg" id="two">
         </div>
         <div class="project-description first lt">
-          <h3>Movers 'n' Makers</h3>
-          <p>Marketplace for locally borrowing items you need and lending out items you don't.</p>
-          <p><a href="http://www.moversnmakers.herokuapp.com" target="_blank">Website</a></p>
-          <p><a href="https://github.com/tonipanacek/moversnmakers" target="_blank">Github</a></p>
+          <h3>Colour TV</h3>
+          <p>Website for a film production company in London.</p>
         </div>
       </div>
     </div>
+    <div class="card">
+      <div class="card-content">
+        <div class="project-description second rt">
+          <h3>Kelly Diepenbrock Design</h3>
+          <p>Website for a graphic designer and photographer. </p>
+          <p><a href="https://kellydiepenbrock.com" target="_blank">Website</a></p>
+        </div>
+        <div class="project-images">
+          <img src="images/kelly1.png" alt="toni" class="img-lrg" id="three">
+          <div class="border right third"></div>
+        </div>
+      </div>
+    </div>
+  </div>
     <div class="footer" id="contact">
       <div class="contact-links">
         <a href="mailto:toni.panacek@gmail.com"><i class="fas fa-envelope"></i></a>
